src/objects/PIA_R__c.object
<CustomObject>
    <fields>
        <fullName>step10__c</fullName>
        <label>step10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>step11__c</fullName>
        <label>step11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>step12__c</fullName>
        <label>step12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PIA_R</label>
    <listViews>
        <fullName>test002</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <nameField>
        <label>番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>